--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,10 +1,8 @@
 // _variables.scss
 
 // Colores
-$color-principal: #ff5733;  // Naranja
-$color-secundario: #3498db;  // Azul
-$color-texto: #333;  // Gris oscuro
+$color-boton: #571862;
+$color-secundario: #8D99AE;
+$color-principal: #343432;
 
 // Fuentes
-$fuente-base: 'Arial', sans-serif;
-$fuente-secundaria: 'Courier New', monospace;
